Fix text contrast on cards

--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,11 @@ p {
     margin: 0%;
 }
 
+h2 {
+    font-weight: bolder;
+    font-size: xx-large;
+}
+
 .button-container {
     margin-top: 15px;
     width: 20%;
@@ -244,7 +249,11 @@ p {
 
 .views,
 .view-count {
-    color: #ffffff;
+    color: #ffff00;
+    font-weight: bolder;
+    font-size: x-large;
+    text-shadow: 2px 0 #000000, -2px 0 #000000, 0 2px #000000, 0 -2px #000000,
+             1px 1px #000000, -1px -1px #000000, 1px -1px #000000, -1px 1px #000000;
 }
 
 .dropdown {
